<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Centered Profile Image -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_6"
        android:layout_marginBottom="@dimen/spacing_3"
        android:gravity="center">

        <ImageView
            android:id="@+id/pfp_image_view"
            android:layout_width="@dimen/spacing_40"
            android:layout_height="@dimen/spacing_40"
            android:layout_gravity="center"
            android:padding="@dimen/spacing_1"
            android:background="@drawable/profile_picture_background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_user_picture_desc"
            android:src="@drawable/ic_person" />
        <!-- android:src="@drawable/logo" -->
    </FrameLayout>

    <TextView
        android:id="@+id/tv_error_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_user_picture_size_error"
        android:textColor="@color/deep_300"
        android:textSize="@dimen/text_base"
        android:layout_marginVertical="@dimen/spacing_2"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

    <!-- Instructions & Upload Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_3">
        <Button
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_picture_submit"
            android:backgroundTint="@color/light_700"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>
